--- a/main-amenazas-ciberneticas.html
+++ b/main-amenazas-ciberneticas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main-amenazas-ciberneticas.css">
-    <title>Amenazas ciberneticas</title>
+    <title>Divulgacion de amenazas ciberneticas</title>
 </head>
 <body>
     <header>
