Creamos la vista de contactenos

--- a/main-amenazas-ciberneticas.html
+++ b/main-amenazas-ciberneticas.html
@@ -11,7 +11,10 @@
 <body>
     <header>
         <div class="barra-navegacion">
-            <a href="#" class="logo"><img src="./assets/img/logo.png" alt="Logo"></a>
+            <div id="log" class="log" onclick="redirigir()">
+                <a href="#" class="logo"><img src="./assets/img/logo-solution-tech.png" alt="Logo"></a>
+                <p>Security Tech</p>
+            </div>
             <button class="menu-toggle">&#9776;</button>
             <nav>
                 <ul>
@@ -42,6 +45,7 @@
             </ul>
         </aside>
         <section class="main-content">
+            <h1><strong>Todo lo que debes saber sobre amenazas ciberneticas</strong></h1>
             <section id="introduccion">
                 <h2>Introducción</h2>
                 <p>Las amenazas cibernéticas representan riesgos crecientes en el mundo digital actual. Desde malware
