--- a/formulario.html
+++ b/formulario.html
@@ -19,17 +19,17 @@
             <nav>
                 <ul>
                     <li><a href="#inicio">Acerca de nosotros</a></li>
-                    <li><a href="#amenazas">Recomendaciones</a></li>
+                    <li><a href="/main-amenazas-ciberneticas.html">Recomendaciones</a></li>
                     <li><a href="#consejos">Prevención</a></li>
-                    <li><a href="#contacto">Contactanos</a></li>
+                    <li><a href="/formulario.html">Contactanos</a></li>
                 </ul>
             </nav>
         </div>
         <div class="drop-down-menu">
             <li><a href="#inicio">Acerca de nosotros</a></li>
-            <li><a href="#amenazas">Recomendaciones</a></li>
+            <li><a href="/main-amenazas-ciberneticas.css">Recomendaciones</a></li>
             <li><a href="#consejos">Prevención</a></li>
-            <li><a href="#contacto">Contactanos</a></li>
+            <li><a href="/formulario.html">Contactanos</a></li>
         </div>
     </header>
     <div class="container">
