--- a/main-amenazas-ciberneticas.html
+++ b/main-amenazas-ciberneticas.html
@@ -19,17 +19,17 @@
             <nav>
                 <ul>
                     <li><a href="#inicio">Acerca de nosotros</a></li>
-                    <li><a href="#amenazas">Recomendaciones</a></li>
+                    <li><a href="/main-amenazas-ciberneticas.html">Recomendaciones</a></li>
                     <li><a href="#consejos">Prevención</a></li>
-                    <li><a href="#contacto">Recursos</a></li>
+                    <li><a href="/formulario.html">Contactanos</a></li>
                 </ul>
             </nav>
         </div>
         <div class="drop-down-menu">
             <li><a href="#inicio">Acerca de nosotros</a></li>
-            <li><a href="#amenazas">Recomendaciones</a></li>
+            <li><a href="/main-amenazas-ciberneticas.html">Recomendaciones</a></li>
             <li><a href="#consejos">Prevención</a></li>
-            <li><a href="#contacto">Recursos</a></li>
+            <li><a href="/formulario.html">Contactanos</a></li>
         </div>
     </header>
     <main class="content">
@@ -47,6 +47,7 @@
         <section class="main-content">
             <h1><strong>Todo lo que debes saber sobre amenazas ciberneticas</strong></h1>
             <section id="introduccion">
+                <img class="img-inicio" src="/assets/img/cyber-attack-with-unrecognizable-hooded-hacker-using-virtual-reality-digital-glitch-effect.jpg" alt="">
                 <h2>Introducción</h2>
                 <p>Las amenazas cibernéticas representan riesgos crecientes en el mundo digital actual. Desde malware
                     hasta ataques de phishing, estas amenazas comprometen la seguridad de datos y sistemas informáticos,
@@ -62,6 +63,7 @@
                     confidencial o interrupción de servicios.</p>
             </section>
             <section id="¿como-identificar-amenazas-ciberneticas?">
+                <img class="img-inicio" src="/assets/img/html-css-collage-concept-with-hacker.jpg" alt="">
                 <h2>¿Cómo identificar amenazas cibernéticas?</h2>
                 <p>
                     Identificar amenazas cibernéticas requiere un enfoque proactivo y una comprensión de los diferentes
@@ -104,6 +106,7 @@
             </section>
             <section id="amenazas-mas-comunes">
                 <h2>Amenazas más comunes</h2>
+                <img class="img-inicio" src="/assets/img/portrait-hacker-with-mask.jpg" alt="">
                 <article>
                     <h3>Malware</h3>
                     <p>Software malicioso diseñado para infiltrarse o dañar un sistema o red, como virus, gusanos,
@@ -142,6 +145,30 @@
             </section>
         </section>
     </main>
+    <footer class="footer">
+        <div class="group-1">
+            <div class="box box-1">
+                <figure class="figure-footer">
+                    <a href="#">
+                        <img class="log-footer" src="/assets/img/logo-solution-tech.png" alt="Logo de Security Tech">
+                    Security Tech</a>
+                </figure>
+            </div>
+            <div class="box box-2">
+                <h2>Expertos en ciberseguridad</h2>
+                <p>Permanece al dia en la prevencion de riesgos siguiendo nuestras redes.</p>
+                <a href="#"><img src="assets/img/log-instagram.png" alt="logo instagram"></a>
+                <a href="#"><img src="assets/img/log-youtube.png" alt="logo youtube"></a>
+                <a href="#"><img src="assets/img/log-linkedin.png" alt="logo linkedin"></a>
+                <a href="#"><img src="assets/img/log-twitter.png" alt="logo x"></a>
+            </div>
+            <div class="box box-3">
+                <p>Edwin D. Toledo</p>
+                <p>Camilo A. Sanches</p>
+                <small>&copy; 2024 <b>Security Tech</b> - Todos los Derechos Reservados.</small>
+            </div>
+        </div>
+    </footer>
     <script src="main-amenazas-ciberneticas.js"></script>
 </body>
 
